Fix issue with layout double wrapping blog posts

--- a/src/components/formInput/formInput.module.css
+++ b/src/components/formInput/formInput.module.css
@@ -15,7 +15,7 @@
   /* remove standard input css */
   background: transparent;
   border: 0;
-  border-bottom: 2px solid red;
+  border-bottom: 2px solid var(--orange-color);
   color: red;
   outline: 0;
   margin-top: 10px;
