--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -58,6 +58,8 @@ Based off of Microsoft's Metro Language */
   --white-color: #fcf5f5;
   --grey-color: grey;
   --red-color: #fc3900;
+  --green-color: #31ffb5;
+  --orange-color: orange;
   --fade-time: 2s;
 }
 
