--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,12 +1,19 @@
 /* remove bullets from list */
 /* put space between nav components */
 
+.navBar {
+  width: 0;
+}
+
 .navBar > ul {
   display: grid;
   flex-direction: column;
   height: 250px;
   list-style-type: none;
   margin: 0;
+  /* commented out but can be useful if needing to move to left */
+  /* margin-left: -10px; */
+  padding-left: 0;
 }
 
 /* Remove underline for links */
